--- a/src/screens/LandingPage/landingpage.css
+++ b/src/screens/LandingPage/landingpage.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  text-align: flex-start;
 }
 
 .landingPageLogo {
@@ -18,6 +19,70 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.landingPageButtonDiv {
+  height: 10vh;
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.landingPageButtonDivMobile {
+  height: 10vh;
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.landingPageButton {
+  background-color:     #EBF4FA; 
+  color:  #46A46C;
+  font-family: 'Montserrat', sans-serif;
+  border: 1px solid #EBF4FA;
+  box-shadow: none;
+  width: auto;
+  padding: 10px;
+  margin: 4px;
+  border-radius: 10px;
+}
+
+.landingPageButton:hover {
+  background-color:     #46A46C;
+  color:   #EBF4FA;
+  font-family: 'Montserrat', sans-serif;
+  border: 1px solid #EBF4FA;
+  box-shadow: none;
+  width: auto;
+  padding: 10px;
+  margin: 4px;
+  border-radius: 10px;
+}
+
+.landingPageButtonDivMobile .landingPageButton {
+  background-color: #46A46C;
+  color:   #EBF4FA; 
+  font-family: 'Montserrat', sans-serif;
+  border: 1px solid #EBF4FA;
+  box-shadow: none;
+  width: auto;
+  padding: 10px;
+  margin: 4px;
+  border-radius: 10px;
+}
+
+.landingPageButtonDivMobile .landingPageButton:hover {
+  background-color: #EBF4FA;   
+  color:  #46A46C;
+  font-family: 'Montserrat', sans-serif;
+  border: 1px solid #EBF4FA;
+  box-shadow: none;
+  width: auto;
+  padding: 10px;
+  margin: 4px;
+  border-radius: 10px;
 }
 
 .landingPageHeaderText {
@@ -36,6 +101,10 @@
     text-align: center;
     border-radius: 10px;
     padding: 6px;
+  }
+
+  .landingPageVideo {
+    width: 100%;
   }
 
 .landingPageBox h1 {
