--- a/src/screens/Year/createyear.css
+++ b/src/screens/Year/createyear.css
@@ -350,8 +350,8 @@
 }
 
 .videoContainer {
-  height: 500px;
-  width: 75%;
+  height: auto;
+  width: auto;
   background-color: #EBF4FA;
   top: 20%;
   left: 12.5%;
