--- a/src/components/Charts/TasksAttempted/ta.css
+++ b/src/components/Charts/TasksAttempted/ta.css
@@ -1,4 +1,17 @@
-#d3demo2 {
-  width: 40vw;
-  height: 40vh;
-}
+@media screen and (min-width: 1201px) {
+
+  #d3demo2 {
+    width: 40vw;
+    height: 40vh;
+  }
+  
+  }
+  
+  @media screen and (max-width: 500px) {
+  
+    #d3demo2 {
+      width: 100vw;
+      height: 40vh;
+    }
+    
+    }
