--- a/src/screens/Insight/insight.css
+++ b/src/screens/Insight/insight.css
@@ -1,7 +1,7 @@
 /* Insight Screen */
 .insightHeader {
   font-family: 'caveat', cursive;
-  color: #EBF4FA;
+  color: rgb(235, 244,250,0.5);
   opacity: 0.5;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .statSpan {
-  color: #EBF4FA;
+  color: rgb(235, 244,250,0.5);
   opacity: 0.5;
 }
 
@@ -25,7 +25,7 @@
 }
 
 #colBorder {
-  border-left: 1px solid rgb(235, 244,250,0.5);
+  border-left: 1px solid rgb(235, 244,250,0.25);
 }
 
 .testRow {
