--- a/src/screens/About/about.css
+++ b/src/screens/About/about.css
@@ -89,6 +89,7 @@
 .aboutHeader {
   font-size: 96px;
   font-family: 'caveat', cursive;
+  color: #fff;
 }
 
 .missionHeader {
@@ -105,6 +106,7 @@
 
 .whatIsNwd {
   text-align: center;
+  margin-bottom: 48px;
 }
 
 .aboutOne,
@@ -133,6 +135,11 @@ color: #fff;
 .explanationRight {
   width: 70%;
 text-align: end;
+}
+
+.aboutPageHeader {
+  font-family: 'caveat', cursive;
+  color: #fff;
 }
 
 @media (max-width: 768px) and (min-width: 0px) {
