--- a/src/screens/Diary/diary.css
+++ b/src/screens/Diary/diary.css
@@ -1,3 +1,13 @@
 .questionTitleButtonsDisplay {
     overflow: scroll;
 }
+
+.datePicker {
+    background-color: #EBF4FA;
+    color: #46A46C;
+    font-family: 'Koulen', cursive;
+    border: 1px solid #46A46C;
+    margin-bottom: 12px;
+    padding: 2px 6px 2px 6px;
+    border-radius: 5px;
+  }
