--- a/src/screens/Quiz/Intro/quizintro.css
+++ b/src/screens/Quiz/Intro/quizintro.css
@@ -201,3 +201,8 @@
   border-radius: 20px;
   border: 10px solid #46A46C;
 }
+
+.imageOrGif {
+  border-radius: 20px; 
+  border: 10px solid #46A46C;
+}
