--- a/src/screens/LandingPage/landingpage.css
+++ b/src/screens/LandingPage/landingpage.css
@@ -183,3 +183,11 @@
   height: 50vh;
   width: 75%;
 }
+
+.landingPageVideoMobile {
+  height: 35vh;
+  width: 100%;
+  margin: 24px;
+  border-radius: 10px;
+  border: 5px solid #EBF4FA;
+}
