--- a/src/screens/LandingPage/landingpage.css
+++ b/src/screens/LandingPage/landingpage.css
@@ -191,3 +191,18 @@ width: 100%;
   border-radius: 10px;
   border: 5px solid #EBF4FA;
 }
+
+#feedbackButton:hover::after {
+  content: attr(data-tooltip);
+  background-color: #EBF4FA;
+  color: #46A46C;
+  height: auto;
+  width: 250px;
+  overflow-wrap: normal;
+  padding: 5px;
+  margin: 6px;
+  position: absolute;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 10px;
+}
