--- a/src/components/Charts/Wave/wavechart.css
+++ b/src/components/Charts/Wave/wavechart.css
@@ -1,8 +1,8 @@
 @media screen and (min-width: 1201px) {
 
     #d3demo6 {
-      width: 40vw;
-      height: 40vh;
+      width: 388px;
+      height: 388px;
     }
     
     }
