--- a/src/screens/Feedback/feedback.css
+++ b/src/screens/Feedback/feedback.css
@@ -22,7 +22,7 @@
 
 .rowHeader {
     color: #EBF4FA;
-    font-family: 'caveat', cursive;
+    font-family: 'Futura';
 }
 
 .feedbackContainer label {
