--- a/src/screens/Payments/paymentscreen.css
+++ b/src/screens/Payments/paymentscreen.css
@@ -27,7 +27,7 @@ grid-template-rows: Repeat(23,1fr);
 }
 
 .topRow h1 {
-    font-family: 'caveat', cursive;
+    font-family: 'Futura';
     color: #EBF4FA;
 }
 
