--- a/src/screens/Quiz/Debrief/quizdebrief.css
+++ b/src/screens/Quiz/Debrief/quizdebrief.css
@@ -74,10 +74,10 @@
 }
 
 .debriefButton {
-  background-color: #46A46C;
+  background-color: #004a22;
   color: #EBF4FA;
   font-family: 'Koulen', cursive;
-  border: 1px solid #46A46C;
+  border: 1px solid #004a22;
 padding: 0 6px 0 6px;
   border-radius: 5px;
   margin-top: 12px;
