--- a/src/screens/Transition/transition.css
+++ b/src/screens/Transition/transition.css
@@ -23,6 +23,6 @@
 
 .landingPageHeaderText {
   color: #EBF4FA;
-  font-family: 'caveat', cursive;
+  font-family: 'Futura';
   font-size: clamp(2vw, 8vw, 10vw);
   }
