--- a/src/screens/About/about.css
+++ b/src/screens/About/about.css
@@ -88,7 +88,7 @@
 
 .aboutHeader {
   font-size: 96px;
-  font-family: 'caveat', cursive;
+  font-family: 'Futura';
   color: #fff;
 }
 
@@ -143,7 +143,7 @@ text-align: end;
 }
 
 .aboutPageHeader {
-  font-family: 'caveat', cursive;
+  font-family: 'Futura';
   color: #fff;
 }
 
