--- a/src/screens/Quiz/Feeling/quizfeeling.css
+++ b/src/screens/Quiz/Feeling/quizfeeling.css
@@ -16,7 +16,7 @@
 .toggleSpread {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
@@ -25,10 +25,10 @@
 }
 
 .toggleButton {
-  background-color: #46A46C;
-  color: #EBF4FA;
-  font-family: 'Koulen', cursive;
-  border: 1px solid #46A46C;
+  background-color:#004a22;
+  color: whitesmoke;
+  font-family: 'Futura';
+  border: 1px solid #004a22;
   margin: 0 6px 0 6px;
 }
 
@@ -38,7 +38,7 @@
 }
 
 .feelingVarianceChart {
-  border: 3px solid #46A46C;
+  border: 3px solid #004a22;
   border-radius: 10px;
 }
 
@@ -47,7 +47,7 @@
 }
 
 .waveContentChart {
-  border: 3px solid #46A46C;
+  border: 3px solid #004a22;
   border-radius: 10px;
 }
 
