--- a/src/screens/Quiz/Tasks/quiztasks.css
+++ b/src/screens/Quiz/Tasks/quiztasks.css
@@ -4,12 +4,12 @@
 
 .taskImage2 {
   margin-top: 6px;
-  border: 2px solid #46A46C;
+  border: 2px solid #004a22;
   border-radius: 3px;
   float: right;
 }
 
 .taskImage1 {
-  border: 2px solid #46A46C;
+  border: 2px solid #004a22;
   border-radius: 3px;
 }
